# Long-Hour-Coding

./: LICENSE.md  README.md  main.py  setup.cfg
signal_ICT_RishiSampat_169/: operations.py  trigonometric_signals.py  unitary_signals.py
signal_ICT_RishiSampat_169.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
