[metadata]
name = signal-ICT-RishiSampat-169
version = 0.1.0
author = Rishi Sampat
description = A Python package for signal processing operations and signal generation
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/yourusername/signal_ICT_RishiSampat_169
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
